# libexif-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: docs.yaml  libexif.yml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/libexif/: all.html  constant.EXIF_HEADER.html  constant.JPEG_HEADER.html  enum.ByteOrder.html  enum.DataEncoding.html  enum.DataOption.html  enum.DataType.html  enum.ExifIfd.html  enum.ExifTag.html  enum.IFD.html  enum.SupportLevel.html  enum.Value.html  index.html  sidebar-items.js  struct.Content.html  struct.Data.html  struct.Entry.html  struct.Rational.html  struct.Tag.html  type.ExifEntry.html
docs/libexif/bindings/: enum.ExifIfd.html  enum.ExifTag.html  type.ExifEntry.html
docs/libexif/bits/: enum.ByteOrder.html  enum.DataEncoding.html  enum.DataOption.html  enum.DataType.html  enum.IFD.html  enum.SupportLevel.html
docs/libexif/content/: struct.Content.html
docs/libexif/data/: constant.EXIF_HEADER.html  constant.JPEG_HEADER.html  struct.Data.html
docs/libexif/entry/: struct.Entry.html
docs/libexif/error/: enum.ExifError.html  index.html  sidebar-items.js
docs/libexif/tag/: struct.Tag.html
docs/libexif/value/: enum.Value.html  struct.Rational.html
docs/src/libexif/: bindings.rs.html  bits.rs.html  content.rs.html  data.rs.html  entry.rs.html  error.rs.html  internal.rs.html  lib.rs.html  loader.rs.html  tag.rs.html  value.rs.html
examples/: dump.rs
src/: bindings.rs  bits.rs  content.rs  data.rs  entry.rs  error.rs  lib.rs  loader.rs  tag.rs  value.rs  writer.rs
(+19 files in other folders)
