[package]
name = "exif"
version = "0.0.1"
edition = "2021"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust wrapper for libexif"
homepage = "https://gitlab.com/dcuddeback/exif"
repository = "https://gitlab.com/dcuddeback/exif"
license = "MIT"
readme = "README.md"
keywords = ["libexif", "EXIF", "image"]

[dependencies]
exif-sys = { path = "../libexif-sys/" }
libc = "0.2"
