[package]
name = "libexif"
version = "0.0.2"
edition = "2021"
description = "Rust wrapper for libexif"
homepage = "https://github.com/aftershootco/libexif-rs"
repository = "https://github.com/aftershootco/libexif-rs"
license = "MIT"
readme = "README.md"
keywords = ["libexif", "EXIF", "image"]
build = "build.rs"

[dependencies]
libc = "0.2"
paste = "1.0.6"
thiserror = "1.0.30"

[build-dependencies]
autotools = "0.2.4"
bindgen = "0.59.2"

[features]
default = ['static']
static = []
